# dghs-imgutils-rs

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  imgutils_python_features.md  mise.toml  package.json  test_napi.ts
benches/: adversarial_bench.rs
benchmark/: run_python_ccip.py  run_python_data.py  run_python_detect.py  run_python_metadata_sd.py  run_python_metrics.py  run_python_ocr.py  run_python_operate.py  run_python_pose.py  run_python_segment.py  run_python_tagger.py  run_python_validate.py
src/: config.rs  lib.rs  main.rs
src/ascii/: mod.rs
src/detect/: base.rs  booru.rs  censor.rs  eye.rs  face.rs  halfbody.rs  hand.rs  head.rs  mod.rs  nudenet.rs  person.rs  similarity.rs  text.rs  visual.rs
src/edge/: canny.rs  lineart.rs  lineart_anime.rs  mod.rs
src/generic/: clip.rs  enhance.rs  mod.rs  siglip.rs  timm.rs  yoloseg.rs
src/hub/: error.rs  mod.rs  model_list.rs
src/image/: encode.rs  error.rs  layer.rs  load.rs  mod.rs
src/inference/: classify.rs  error.rs  mod.rs  yolo.rs
src/metadata/: geninfo.rs  lsb.rs  mod.rs
src/metrics/: ccip.rs  dbaesthetic.rs  laplacian.rs  lpips.rs  mod.rs  psnr_.rs
tests/: ccip_benchmark.rs  data_utils_benchmark.rs  detect_benchmark.rs  generic_benchmark.rs  metadata_sd_benchmark.rs  metrics_benchmark.rs  ocr_benchmark.rs  operate_benchmark.rs  pixai_benchmark.rs  pose_benchmark.rs  precision_test.rs  resource_ascii_benchmark.rs  restore_upscale_benchmark.rs  segment_benchmark.rs  tagging_benchmark.rs  validate_benchmark.rs
(+73 files in other folders)
