[package]
name = "dghs-imgutils-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.4.0"
hf-hub = "0.5.0"
image = "0.25.10"
ndarray = "0.17.2"
once_cell = "1.21.4"
ort = { version = "2.0.0-rc.12", features = ["cuda", "tensorrt", "openvino", "directml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
pathfinding = "4.12.0"
imageproc = "0.25.0"
ab_glyph = "0.2.28"
lru = "0.12"
ureq = "2"
base64 = "0.22"
url = "2"
napi = { version = "2.16.11", features = ["async", "serde-json", "napi4"], optional = true }
napi-derive = { version = "2.16.9", optional = true }

[build-dependencies]
napi-build = "2.1.4"

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive"]
